:art: Ensure all overflow is hidden

--- a/src/common/styles/main.scss
+++ b/src/common/styles/main.scss
@@ -7,7 +7,7 @@ $CycleSelect-size: 54px;
 html, body {
     height: 100%;
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 body {
